styles/index.css
/* ... */
time[title] {
  background: lime;
}
time[datetime] {
  background: orange;
}
time::before, time::after
  { background-color: currentColor }
time::before {
  content: '⌚';
  padding: 0.1682ch;
  margin-inline-end: 1ch;
}
time::after{
  content: attr(datetime);
  margin-inline-start: 0.1682ch;
}
time[datetime]::before {
  content: '🗓';
}
time[datetime]::after {
  padding: 0.1682ch;
  margin-inline-start: 1ch;
  box-shadow: 0 0 0.1ch 0.1682ch;
}
time:empty {
  background: yellow;
}
time:empty::before {
}
p time { vertical-align: middle }

data, var {
  color: CanvasText;
  padding: 0.1618em;
  font-weight: bold;
  background: ButtonFace;
  margin-inline: 0.1618em;
}
data {}
var{}

pre, code, kbd, samp
  { border-radius: 0.618em }
pre code {
  display: inherit;
  border-radius: unset;
  border: solid currentColor;
  border-width: 0 0 0 0.02em;
}


/* http://html5doctor.com/the-details-and-summary-elements */
details { }
summary {
  opacity: 0.75;
  list-style: none;
}
summary::before,
summary::after {
  content: 'foo';
  background: orange;
}

summary::-webkit-details-marker
  { display: none } /* https://stackoverflow.com/a/66814239 */
details:hover > summary, details:focus-within > summary
  { opacity: 1.0 }
main details > summary::before
  { content: '>' }
main details[open] > summary::before
  { content: 'v' }


/* NAV */
nav {
  background: pink;
  margin: 0;
  /* padding: 0; */
}
nav > details > ul {
  margin: unset;
  width: inherit;
  display: list-item;
  position: relative;
}

nav > details > ul li li {
  list-style: '➱' inside;
}

nav > details > ul li li:hover {
  list-style-type: '➯';
}

nav details > summary {
  cursor: s-resize;
  list-style: '📁' inside;
}
nav details[open] > summary {
  cursor: n-resize;
  list-style: '📂';
}
nav > details > summary {
  right: 2ch;
  bottom: 2ch;
  width: 100%;
  width: 38%;
  opacity: 100%;
  position: fixed;
  display: block;
  display: list-item;
  position: absolute;
  background: canvas;
  /* box-shadow: var(--shadow); */
  text-align: var(--text-align);
  /* clip-path: inset(0px 244px 1px 170px); */
   /* https://htmlsymbols.xyz/unicode/U+2630 */
  clip-path: none;
}
nav > details > summary {
}
nav > details > summary::before,
nav > details > summary::after {
  content: '☰';
  left: -1ch;
  padding: 1ch;
  z-index: -1;
  background: inherit;
  display: inline-block;
  vertical-align: text-top;
  box-shadow: var(--shadow);
  font-size: calc(1em * var(--GOLDEN-RATIO));
  border: calc(0.1ch * var(--GOLDEN-RATIO)) solid;
}
nav > details > summary::before {
  position: relative
}
nav > details > summary::after {
  /* list-style-type: unset; */
  /* position: fixed; */
  /* bottom: 1ch; */
  /* right: 1ch; */
}
nav > details[open] > summary {
  list-style-position: inside;
  list-style-type: 'ⓧ';
}
nav > details[open] > summary::before,
nav > details[open] > summary::after {
  content: 'ⓧ';
}
nav > details[open] > summary:hover::before,
nav > details[open] > summary:hover::after {
  /* https://htmlsymbols.xyz/unicode/U+2716 */
  content: '✖';
}
body > nav *::before, body > nav *::after {
  outline: 1ch solid lightgrey;
  outline-offset: 1ch;
  outline: 0;
  border: 1ch solid magenta;
  border-width: 1ch 0;
  text-align: center;
  display: inherit;
}
body > nav *::before {
  content: '⇇';
  cursor: grabbing;
  list-style-type: 'foo';
  background: yellow;
}
body > nav *::after {
  content: '⇉';
  cursor: grabbing;
  background: blue;
  list-style-type: 'bar';
  outline: 0;
  border-width: 1ch 0;
}
body > nav > details::after {
  z-index: -1;
  border: none;
  outline: none;
  position: fixed;
  bottom: 0;
  left: 0ch;
  width: 0;
  height: 0;
  background: rgba(0,0,0,0.2);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter */
  backdrop-filter: blur(calc(1ch * var(--GOLDEN-RATIO)));
  color: Canvas;
  text-align: center;
  font-size: calc(100vh / var(--GOLDEN-RATIO));
  line-height: 0;
  opacity: 80%;
}
body > nav > details[open]::after {
  width: 100vw;
  height: 100vh;
  line-height: 100vh;
}


body > nav li li :link:focus-visible {
  background-color: Mark;
}
body > nav li li :link::before {
  content: '📄';
  display: inline-block;
  line-height: var(--line-height);
}
body > nav li li :link:hover::before {
  content: '📝';
}


address { }
li address { display: inline-block }
/* Table styling
  - https://adrianroselli.com/2018/02/tables-css-display-properties-and-aria.html
  - counter styling & fallback
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/forced-colors
    - https://stackoverflow.com/questions/17067294/html-table-with-100-width-with-vertical-scroll-inside-tbody/17380697#17380697
*/
table {
  /* TODO: FIX HEIGHT FROM 100vh */
  height: 100vh;
  display: block;
  overflow-y: scroll;
  table-layout: fixed;
  counter-reset: table;
  border-radius: 0.618em;
  border-collapse: collapse;
  box-shadow: var(--box-shadow);
  margin: 0 var(--line-height) var(--line-height);
}
table *
  { display: inherit }
caption {
  top: 0;
  z-index: 1;
  position: sticky;
  caption-side: top;
}
thead {}
tbody {}
th {
  top: 5em;
  padding: 0.618em;
  position: sticky;
  white-space: nowrap;
  border-bottom: 0.0618em solid
}
th:empty
  { border: none }
th[scope=row]
  { font-size: var(--smaller) }
th[scope=row]:after {
  white-space: nowrap;
  content: counter(th);
}
tr
  {}
tr:before
  { content: '' }
td {
  -webkit-user-select: text;
          user-select: text;
}

tbody tr
  { counter-increment: table }
tfoot th
  { border-top: 0.0618em solid }
th, thead, tfoot, thead tr, tfoot tr, tbody tr:nth-child(even)
  { background: ButtonFace }

a {
  display: inline;
  cursor: pointer;
  padding: 0.303ch 0.6182ch;
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}
a[rel=search]
  { cursor: help }
abbr[title]
  { cursor: help }
a[href='#'][title^=Top] {
  display: block;
  width: fit-content;
  text-decoration: none;
  margin: var(--p-margin) auto;
  padding: 1ch var(--line-height);
}
/* ... */

